cluster/apps/codeserver/codeserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeserver
  namespace: codeserver
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      containers:
        - name: codeserver
          image: lscr.io/linuxserver/code-server:4.109.5@sha256:aa43fb2fc31127e9d2166e903c7f13792351e38658ba29645662a89ff04ff90d
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: codeserver-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: codeserver
  namespace: codeserver
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8443
      port: 8443
      protocol: TCP
  selector:
    app: codeserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver
  namespace: codeserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: 4096
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: codeserver.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codeserver
                port:
                  number: 8443
  tls:
    - hosts:
        - codeserver.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: codeserver-tls
